# K.O.D.A.

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INCIDENT_RESPONSE.md  LICENSE  PYPI_SETUP.md  README.md  ROADMAP.md  SECURITY.md  VISION.md  install.sh  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: audit-presets.md  compatibility.md  continuous-monitoring.md  index.md  install.md  mcp-hardened.md  providers.md  release.md  remote-bundles.md  remote-scanning.md  security-model.md  skills.md
koda/: __init__.py  __main__.py  config.py  profiles.py
koda/adapters/: __init__.py  anthropic_api.py  azure_openai.py  base.py  bedrock.py  claude_cli.py  gemini.py  llamacpp.py  ollama.py  openai_compat.py  vertex_ai.py
koda/agent/: loop.py  reflection.py
koda/agents/: __init__.py  harness.py  scaffold.py
koda/audit/: __init__.py  logger.py
koda/auth/: __init__.py  broker.py
koda/cli/: __init__.py  audit.py  bundle.py  cost.py  demo.py  intel.py  learn.py  new.py  new_agent.py  remote.py  report.py  scan.py  schedule.py  wizard.py
koda/evidence/: __init__.py  bundle.py  remote.py  store.py
koda/intel/: __init__.py  feeds.py  store.py
koda/learning/: __init__.py  guard.py  hook.py  promoter.py  report.py  report_delivery.py  report_pdf.py  schedule.py  scoring.py  store.py  synthesizer.py  synthesizer_llm.py
koda/mcp/: __init__.py  auth.py  server.py
koda/memory/: __init__.py  drawers.py
koda/missions/: __init__.py
koda/nlu/: __init__.py  router.py
koda/notify/: __init__.py  telegram.py  telegram_daemon.py
koda/plugins/: __init__.py  discovery.py  manifest.py  registry.py
koda/providers/: __init__.py  catalog.py  pricing.py
koda/remote/: __init__.py  executor.py  probe.py  provision.py  ssh.py
koda/schedule/: __init__.py  alerts.py  cron.py  differ.py  models.py  tick.py
koda/security/: __init__.py  cis.py  correlation.py  findings.py  guardian.py  guardrails.py  harness.py  ir.py  modes.py  prompts.py  roe.py  runner.py  sigma.py  verifier.py
scripts/: smoke.sh
tests/: test_adapters_new.py  test_auth_broker.py  test_bedrock.py  test_cli_audit.py  test_cli_check.py  test_cli_learn.py  test_cli_new.py  test_cli_update.py  test_compressor.py  test_dependency_track.py  test_evidence_remote.py  test_evidence_store.py  test_guardian.py  test_learning.py  test_learning_cli_schedule.py  test_learning_guard_trust.py  test_learning_hook.py  test_learning_llm.py  test_learning_report.py  test_learning_report_delivery.py  test_learning_report_pdf.py  test_learning_schedule.py  test_learning_scoring.py  test_mcp_auth.py  test_missions.py  test_new_scanners.py  test_nlu_router.py  test_plugins_manifest.py  test_reflection.py  test_remote_ssh.py  test_scanner_exit_codes.py  test_schedule.py  test_security_verifier.py  test_skills_loader.py  test_tools_approval.py  test_tools_learn.py  test_vertex_ai.py
(+50 files in other folders)
