[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koda"
version = "0.1.0"
description = "K.O.D.A. — open-source security specialist agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Vektra Industries" }]
keywords = ["ai", "agent", "security", "llm", "anthropic", "ollama"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "rich>=13.7",
    "prompt_toolkit>=3.0.47",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
koda = "koda.cli:main"

[tool.setuptools.packages.find]
include = ["koda*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
